<resources>
    <string name="app_name">iLibrary</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="add_book">Add Book</string>
    <string name="or">Or</string>
    <string name="view_by">View by</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="copyright_elite_developers">©2016 Elite Developers</string>
    <string name="about">About</string>
    <string name="book_name">Book Name</string>
    <string name="author_name">Author Name</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="author_">Author:</string>
    <string name="category_">Category:</string>
    <string name="abcd">abcdefghijklmnopqrstuvwxyz</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">We are Elite Developers. Some passionate Android Application Developers. We love to take challenge and solve creative problems. This is our first app. Feel free to contact with us and give your feedback. Thank you.</string>
    <string name="monir_hossain">Monir Hossain</string>
    <string name="abdullah_al_mamun">Abdullah Al Mamun</string>
    <string name="mahabub_hossan">Mahabub Hossan</string>
</resources>
