<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAppMain"
    tools:context=".activities.BookDetailsActivity">

    <TextView
        android:id="@+id/tvBook"
        android:text="@string/name"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvBookName"
        android:layout_toRightOf="@+id/tvBook"
        android:text="@string/book_name"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvAuthor"
        android:text="@string/author_"
        android:textSize="20sp"
        android:layout_below="@id/tvBook"
        android:layout_marginTop="5dp"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvAuthorName"
        android:layout_toRightOf="@+id/tvAuthor"
        android:layout_below="@+id/tvBookName"
        android:layout_marginTop="5dp"
        android:text="@string/author_name"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_below="@+id/tvAuthor"
        android:layout_marginTop="5dp"
        android:text="@string/category_"
        android:textSize="20sp"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvCategoryName"
        android:layout_toRightOf="@+id/tvCategory"
        android:layout_below="@+id/tvAuthorName"
        android:layout_marginTop="5dp"
        android:text="@string/category"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_below="@+id/tvCategory"
        android:layout_marginTop="19dp"
        android:text="@string/abcd"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="150sp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_below="@id/tvDescription"
        android:layout_marginTop="19dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="deleteBook"
        android:background="@color/colorSkyBlue"
        android:textColor="@color/colorWhite"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_below="@id/tvDescription"
        android:layout_marginTop="19dp"
        android:layout_alignParentRight="true"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:onClick="editBook"
        android:background="@color/colorSkyBlue"
        android:textColor="@color/colorWhite"
        android:layout_width="120dp"
        android:layout_height="wrap_content" />

</RelativeLayout>
