<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorAppMain"
    tools:context=".activities.HomeActivity">

    <Button
        android:id="@+id/btnAddBook"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/add_book"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@color/colorSkyBlue"
        android:textColor="@color/colorWhite"
        android:onClick="gotoAddBookActivity"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_below="@+id/btnAddBook"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/or"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvViewBy"
        android:layout_below="@+id/tvOr"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/view_by"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnAuthor"
        android:layout_below="@+id/tvViewBy"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/author"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@color/colorSkyBlue"
        android:textColor="@color/colorWhite"
        android:onClick="gotoAuthorListActivity"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCategory"
        android:layout_below="@+id/btnAuthor"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/category"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@color/colorSkyBlue"
        android:textColor="@color/colorWhite"
        android:onClick="gotoCategoryListActivity"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />


</RelativeLayout>
